Clean and refact code